tests/typecast/typecast.exp
Error ------------------------------------------------------------------------------------------------- typecast.js:7:13

Cannot cast `"hey"` to number because string [1] is incompatible with number [2]. [incompatible-type]

   typecast.js:7:13
   7|     var n = "hey" as number;
                  ^^^^^ [1]

References:
   typecast.js:7:22
   7|     var n = "hey" as number;
                           ^^^^^^ [2]



Found 1 error
